# tudo

./: .nvimrc  Cargo.toml  README.md  config.lua  flake.nix  shell.nix
plugins/: pass.lua  vlad.lua
src/: animation.rs  app.rs  config.rs  context.rs  execute.rs  layout.rs  layout2.rs  main.rs  sandbox.rs  screen.rs
src/components/: enums.rs  list.rs  mod.rs  source_items_list.rs  spinner.rs  text.rs  traits.rs
src/screen/: debug_screen.rs  info_screen.rs  main_screen.rs  mod.rs
src/sources/: actions.rs  apps.rs  dummy.rs  lua.rs  mod.rs  notes.rs  secrets.rs  tmux.rs  windows.rs
src/ui/: layout.rs  mod.rs
src/ui/components/: button.rs  clock.rs  enums.rs  label.rs  list.rs  mod.rs  spinner.rs  text.rs  traits.rs  tray.rs  workspaces.rs
src/utils/: atlas.rs  cache.rs  draw.rs  font.rs  fuzzy.rs  hyprland.rs  icons.rs  image.rs  math.rs  misc.rs  mod.rs  xdg.rs
