[package]
name = "tudo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf", "image"]}
enum_downcast = { version="0.1.0", features = ["derive"] }
xcb =  { version = "1.3.0", features = ["debug_atom_names" ] }
copypasta = "0.10.0"
