[package]
name = "tudo"
version = "0.1.0"
edition = "2021"
default-run = "tudo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
sdl2 = { version = "0.35.2", features = ["ttf", "image"]}
enum_downcast = { version="0.1.0", features = ["derive"] }
xcb =  { version = "1.3.0", features = ["debug_atom_names" ] }
rlua = "0.19.7"
spin_sleep = "1.2.0"

[[bin]]
name = "tudo"
path = "src/main.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox.rs"
