[package]
name = "tudo"
version = "0.2.0"
edition = "2021"
default-run = "tudo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
mlua = { version = "0.9.5", features = ["lua54", "vendored", "serialize"] }
sdl2 = { version = "0.35.2", features = ["ttf", "image"] }
enum_downcast = { version = "0.1.0", features = ["derive"] }
xcb = { version = "1.3.0", features = ["debug_atom_names"] }
spin_sleep = "1.2.0"
serde = { version = "1.0.196", features = ["derive"] }
dyn-clone = "1.0.16"
ureq = { version = "2.9.5", features = ["json"] }
chrono = "0.4.38"
signal-hook = "0.3.17"

[[bin]]
name = "tudo"
path = "src/main.rs"

